# Projeto_etl

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
data/output/: output.xlsx
docs/: extract.md  index.md  load.md  transform.md
extract/: index.html
load/: index.html
search/: search_index.json
src/: main.py
src/pipeline/: __init__.py  extract.py  load.py  transform.py
tests/: __init__.py  test_pipeline.py
transform/: index.html
