[tool.poetry]
name = "projeto-etl"
version = "0.1.0"
description = "Meu projeto de ETL"
authors = ["Moisés <moises_arruda@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.3"
pytest = "^7.4.3"
isort = "^5.12.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []


[tool.taskipy.tasks]

format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 src/main.py"